# c_graphics_task2

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: edu_cmp.h  edu_search.h  edu_sort.h
src/: edu_search.c  edu_sort.c
test/: CMakeLists.txt  main.c
